fix css spacing at bottom of page

--- a/app/assets/app/components/page/_page.scss
+++ b/app/assets/app/components/page/_page.scss
@@ -1,6 +1,6 @@
 main {
-    height: inherit;
-    margin-top: 50px;
+    height: 100%;
+    padding-top: 50px;
     overflow: hidden;
     #main_view {
         height: inherit;
